# fastapi-reservation

./: README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt  sql_app.db
backend/src/: .env  crud.py  database.py  main.py  models.py
frontend/: Dockerfile  pyproject.toml  requirements.txt
frontend/src/: .env  main.py
