[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["takuya.mouri <ayukat101699@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
streamlit = "^1.45.1"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
